<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!--background-->
    <ImageView
        android:id="@+id/bg_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        tools:src="@drawable/bg_location"
        />
    <!--lotti-->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anima_rain"
        android:layout_width="@dimen/_70mdp"
        android:layout_height="@dimen/_70mdp"
        android:layout_marginTop="@dimen/_120mdp"
        android:layout_marginEnd="@dimen/_92mdp"
        android:background="@drawable/bg_lottie"
        android:padding="@dimen/_2mdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/cloudy_weather"
        app:lottie_repeatCount="20" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anima_lightning"
        android:layout_width="@dimen/_70mdp"
        android:layout_height="@dimen/_70mdp"
        android:layout_marginTop="@dimen/_70mdp"
        android:layout_marginStart="@dimen/_26mdp"
        android:background="@drawable/bg_lottie"
        android:padding="@dimen/_2mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/sun_weather"
        app:lottie_repeatCount="20" />

    <!--card-view-->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15mdp"
        android:layout_marginBottom="@dimen/_65mdp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16mdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/white"
        android:layout_marginTop="@dimen/_15mdp"
        >
        <!--Container-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_6mdp"
            >
            <!--text-->
            <TextView
                android:id="@+id/txt_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10mdp"
                android:layout_marginTop="@dimen/_12mdp"
                android:textAppearance="@style/TextAppearance_medium"
                android:textColor="@color/gray_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/messageAQI2" />
            <!--bottom-->
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/txt_continue"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_10mdp"
                style="@style/pinkMaterialButton"
                app:rippleColor="@android:color/transparent"
                android:id="@+id/btn_accept"
                app:backgroundTint="@color/Blue_Magenta" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>